--- a/src/Pages/Home.scss
+++ b/src/Pages/Home.scss
@@ -10,10 +10,18 @@
     margin-left: 15px;
 }
 
-.pokemonList {
+.pokemonList__Wrap {
     height: 500px;
-    overflow-y: auto;
     margin: 30px 0 30px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pokemonList {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
     text-transform: capitalize;
     list-style-type: square;
     li {
