--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,16 @@ h5 {
   margin: 5px 0;
 }
 
+.error {
+  color: red;
+  span {
+    margin-left: 20px;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+  }
+}
+
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
